[package]
name = "authentication"
version = "0.1.0"
edition = "2021"
default-run = "authentication"

[dependencies]
argon2 = "0.4.1"
serde = { version = "1.0.144", features = ["derive"] }
rand_core = { version = "0.6.3", features = ["std"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "secrets"]